finally fix deatils buttton (fadd css gap)

--- a/src/styles/Shows.css
+++ b/src/styles/Shows.css
@@ -69,6 +69,7 @@
 .show-image {
   width: 100%;
   height: auto;
+  height: 300px;
   object-fit: cover;
   border-top-left-radius: 12px;
   border-top-right-radius: 12px;
